Fix bug #43314 Assume worst case all-encoded case here

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@295705 c90b9560-bf6c-de11-be94-00142212c4b1